tests/error/class_multiple_public.gw
public class c{}
public class d{}

